--- a/src/AppBundle/Resources/public/js/components/navbar/navbar.html
+++ b/src/AppBundle/Resources/public/js/components/navbar/navbar.html
@@ -1,7 +1,7 @@
 <div class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <button class="navbar-toggle" type="button" ng-click="nv.isCollapsed = !nv.isCollapsed">
+      <button class="navbar-toggle" type="button" ng-click="nv.isCollapsed = true">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -17,15 +17,14 @@
         <li ng-show="!nv.isLoggedIn()" ng-repeat="item in nv.menu" ng-class="{active: nv.isActive(item.link)}">
             <a ng-href="{{item.link}}"> <i class={{item.icon}}></i> <b>{{item.title}}</b></a>
         </li>
-        <li ng-show="nv.isLoggedIn()" ng-class="{active: nv.isActive('/calendarizacion')}"><a href="/calendarizacion"><i class="fa fa-calendar fa-lg"></i> <b>Calendarización</b></a></li>
+        <li ng-show="nv.isLoggedIn()" ng-class="{active: nv.isActive('/calendarizacion')}"><a href="#/facultades"><i class="fa fa-calendar fa-lg"></i> <b>Facultades</b></a></li>
         <li ng-show="nv.isAdmin()" ng-class="{active: nv.isActive('/admin')}"><a href="/admin"><i class="fa fa-key fa-lg"></i><b> Administrar</b></a></li>
         <li ng-show="nv.isDocente() || nv.isRepresentante() || nv.isInvitado()" ng-class="{active: nv.isActive('/admin')}"><a href="/admin"><i class="fa fa-info-circle fa-lg"></i> <b>Consultar</b></a></li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
         <li ng-hide="nv.isLoggedIn()" ng-class="{active: nv.isActive('/login')}"><a href="#/login">Accede</a></li>
-         <li ng-show="nv.isLoggedIn()" ng-class="{active: nv.isActive('/login')}"><a href="/ayuda">Ayuda</a></li>
-        <li ng-show="nv.isLoggedIn()"><p class="navbar-text">Hola {{ nv.getCurrentUser().name }}</p> </li>
+        <li ng-show="nv.isLoggedIn()"><p class="navbar-text">Hola {{ nv.getCurrentUser()[0].nombres }}</p> </li>
         <li ng-show="nv.isLoggedIn()" ng-class="{active: nv.isActive('/logout')}"><a href="" ng-click="nv.logout()">Salir</a></li>
       </ul>
     </div>
