--- a/src/AppBundle/Resources/public/partials/home.html
+++ b/src/AppBundle/Resources/public/partials/home.html
@@ -1,4 +1,7 @@
 <navbar></navbar>
 <div class="container">
- <h1>Bienvenid@</h1>
+  <h1>Menu principal</h1>
+  <ul>
+   <li><a href="#/facultades">Facultades</a></li>
+  </ul>
 </div>
